# mpi_lab4_2

./: CMakeLists.txt  main.cpp
